<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">QuitIt!</string>
    <string name="app_name">QuitIt!</string>
    <!-- A -->
	<string name="about">About</string>
	<string name="about_information">The Quit It application is intended to keep track of how many days you have been nicotine, alcohol, or drug free.  I, the developer, plan on adding more functionality to this application and would welcome any comments/suggestions.</string>
	
	<!-- B -->
	<string name="back">Back</string>
	<!-- C -->
	<string name="contact">Contact Information</string>
    <string name="contact_info">Use the Menu button to send an email.</string>
    
	<!-- D -->
	<string name="developer_tag">Developer</string>
	<string name="developer_name">Tara Verity</string>
	
	<!-- E -->
    <string name="email_us">Email Us</string>
	
	<!-- S -->
	<string name="settings">Settings</string>
	<string name="status_bar_notifications_default">This is a status bar notification</string>
	<string name="status_bar_notifications_happy_message">I am happy</string>
    <string name="status_bar_notifications_ok_message">I am ok</string>
    <string name="status_bar_notifications_sad_message">I am sad</string>
    <string name="status_bar_notifications_clear">Clear notification</string>
    <string name="status_bar_notifications_mood_title">Mood ring</string>
    <string name="status_bar_notifications_default_sound">Sound</string>
    <string name="status_bar_notifications_default_vibrate">Vibrate</string>
    <string name="status_bar_notifications_default_all">All</string>
    
     <string name="short_notification">Short notification.</string>
    <string name="long_notification">Long notification.</string>
    <string name="short_top_notification">Short top.</string>
    <string name="short_bottom_notification">Short bottom.</string>
    <string name="short_center_notification">Short center.</string>
    <string name="short_left_notification">Short left.</string>
    <string name="short_right_notification">Short right.</string>
    <string name="custom_notification">Custom Notification:</string>
    <string name="custom_notification_button">With a Button</string>

    <string name="status_bar_notifications_icons_only">Icons only</string>
    <string name="status_bar_notifications_icons_and_marquee">Icons and marquee</string>
    <string name="status_bar_notifications_remote_views">Use remote views in balloon</string>
    <string name="status_bar_notifications_defaults">Use default values where applicable</string>
    <string name="status_bar_notifications_happy">:-)</string>
    <string name="status_bar_notifications_ok">:-|</string>
    <string name="status_bar_notifications_sad">:-(</string>
</resources>
